<package>
  <name>lidar</name>
  <version>0.1.0</version>
  <description>Custom Lidar Package for lazer range finder on servos</description>
  <maintainer email="WaterfOWLS2017@gmail.com">Temple WaterfOWLS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
